--- a/P008268.opf/meta.yml
+++ b/P008268.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W3MS94
   title: དམ་ཚིག་དང་སྡོམ་པའི་རྣམ་བཞག་འདོད་འཇོ་དབང་རྒྱལ།
   author: ''
-  volumes: {}
+  volumes:
+    8cdf3530fde445969c0bdbd44cbf76eb:
+      image_group_id: I3MS96
+      title: ''
+      volume_number: 1
+      total_pages: 157
