--- a/P008268.opf/layers/v001/Pagination.yml
+++ b/P008268.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: bf913183c6b941aa8e960c1adab825d1
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   52b05a48b558489693f409d4abacd33b:
